<resources>
  <string name="app_name" translatable="false">HexViewer</string>
  <string name="arrays_screen_orientation_entries_automatic">Auto</string>
  <string name="arrays_screen_orientation_entries_portrait">Portrait</string>
  <string name="arrays_screen_orientation_entries_landscape">Landscape</string>
  <string name="search_title">Search</string>
  <string name="search_hint">Search…</string>
  <string name="action_open_title">Open…</string>
  <string name="action_open_title_button">Open</string>
  <string name="action_plain_text_title">Plain text</string>
  <string name="action_line_numbers_title">Line numbers</string>
  <string name="action_save_title">Save</string>
  <string name="action_save_as_title">Save as …</string>
  <string name="action_close_title">Close</string>
  <string name="action_settings_title">Settings</string>
  <string name="action_recently_open_title">Recently opened</string>
  <string name="action_go_to_address">Go to address…</string>
  <string name="action_go_to_line">Go to line…</string>
  <string name="loading">Loading…</string>
  <string name="saving">Saving…</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="cancel">Cancel</string>
  <string name="on_double_back_exit_text">Press again to exit.</string>
  <string name="update_hint_hex">Text</string>
  <string name="error_not_supported_in_plain_text">This is not supported during plain-text display</string>
  <string name="error_filename">Invalid filename!</string>
  <string name="save_success">Saved.</string>
  <string name="operation_canceled">Operation cancelled</string>
  <string name="exception">Exception</string>
  <string name="confirm_overwrite">Overwrite existing file?</string>
  <string name="open_a_file_before">Open a file before!</string>
  <string name="file_manager_keyword">File manager</string>
  <string name="select_file_to_open">Select a file to open.</string>
  <string name="error_no_file_manager">Please install a file manager first.</string>
  <string name="install">Install</string>
  <string name="please_open_file">Please open a file</string>
  <string name="uri_exception">URI exception</string>
  <string name="source">Source:</string>
  <string name="result">Result:</string>
  <string name="zero" translatable="false">0</string>
  <string name="content_description_undo" translatable="false">Undo</string>
  <string name="content_description_redo" translatable="false">Redo</string>
  <string name="default_hex_display_data_portrait" translatable="false">true</string>
  <string name="default_hex_row_height_auto_portrait" translatable="false">true</string>
  <string name="default_hex_row_height_portrait" translatable="false">100</string>
  <string name="default_hex_font_size_portrait" translatable="false">9</string>
  <string name="default_hex_display_data_landscape" translatable="false">true</string>
  <string name="default_hex_row_height_auto_landscape" translatable="false">true</string>
  <string name="default_hex_row_height_landscape" translatable="false">100</string>
  <string name="default_hex_font_size_landscape" translatable="false">16</string>
  <string name="default_hex_display_data_portrait_lines_numbers" translatable="false">false</string>
  <string name="default_hex_row_height_auto_portrait_lines_numbers" translatable="false">true</string>
  <string name="default_hex_row_height_portrait_lines_numbers" translatable="false">100</string>
  <string name="default_hex_font_size_portrait_lines_numbers" translatable="false">11</string>
  <string name="default_hex_display_data_landscape_lines_numbers" translatable="false">true</string>
  <string name="default_hex_row_height_auto_landscape_lines_numbers" translatable="false">true</string>
  <string name="default_hex_row_height_landscape_lines_numbers" translatable="false">100</string>
  <string name="default_hex_font_size_landscape_lines_numbers" translatable="false">16</string>
  <string name="default_plain_row_height_auto_portrait" translatable="false">true</string>
  <string name="default_plain_row_height_portrait" translatable="false">100</string>
  <string name="default_plain_font_size_portrait" translatable="false">12</string>
  <string name="default_plain_row_height_auto_landscape" translatable="false">true</string>
  <string name="default_plain_row_height_landscape" translatable="false">100</string>
  <string name="default_plain_font_size_landscape" translatable="false">16</string>
  <string name="default_smart_input" translatable="false">false</string>
  <string name="default_lines_number" translatable="false">true</string>
  <string name="title_content" translatable="false">00 01 02 03 04 05 06 07 08 09 0A 0B 0C 0D 0E 0F</string>
  <string name="title_content8" translatable="false">00 01 02 03 04 05 06 07</string>
  <string name="default_nb_bytes_per_line" translatable="false">16</string>
  <string name="default_overwrite" translatable="false">false</string>
  <string name="default_screen_orientation" translatable="false">SCREEN_ORIENTATION_UNSPECIFIED</string>
  <string name="default_line_edit_row_height_auto_portrait" translatable="false">true</string>
  <string name="default_line_edit_row_height_portrait" translatable="false">100</string>
  <string name="default_line_edit_font_size_portrait" translatable="false">14</string>
  <string name="default_line_edit_row_height_auto_landscape" translatable="false">true</string>
  <string name="default_line_edit_row_height_landscape" translatable="false">100</string>
  <string name="default_line_edit_font_size_landscape" translatable="false">16</string>
  <string name="default_memory_threshold" translatable="false">~5%</string>
  <string name="default_partial_open_but_whole_file_is_opened" translatable="false">true</string>
  <string name="default_theme_light" translatable="false">theme_light</string>
  <string name="default_theme_dark" translatable="false">theme_dark</string>
  <string name="default_theme_system" translatable="false">theme_system</string>
  <string name="new_value">New value</string>
  <string name="error_less_than">The value cannot be below</string>
  <string name="error_greater_than">The value cannot be above</string>
  <string name="error_invalid_value">Invalid value</string>
  <string name="settings_pref_category_portrait">Portrait</string>
  <string name="settings_pref_title_lists_portrait">Height, font size…</string>
  <string name="settings_pref_summary_lists_portrait">Click to edit</string>
  <string name="settings_pref_category_landscape">Landscape</string>
  <string name="settings_pref_title_lists_landscape">Height, font size…</string>
  <string name="settings_pref_summary_lists_landscape">Click to edit</string>
  <string name="settings_category_hex">Show text hexadecimally (without line numbers)</string>
  <string name="settings_category_hex_line_numbers">Show text hexadecimally (with line numbers)</string>
  <string name="settings_category_plain">View plain text</string>
  <string name="settings_category_line_edit">Text in editing mode</string>
  <string name="settings_pref_title_display_data">Display of data column</string>
  <string name="settings_pref_summary_display_data">Display the data column when displaying text hexadecimally.</string>
  <string name="settings_pref_title_row_height_auto">Automatic height</string>
  <string name="settings_pref_summary_row_height_auto">Determines height based on font size.</string>
  <string name="settings_pref_title_row_height">Height</string>
  <string name="settings_pref_summary_row_height">Row height in the list.</string>
  <string name="settings_pref_title_font_size">Font size</string>
  <string name="settings_pref_summary_font_size">Font size of text in the list.</string>
  <string name="settings_category_about">About</string>
  <string name="settings_pref_title_logs">Logs</string>
  <string name="settings_pref_summary_logs">Application logs.</string>
  <string name="settings_pref_summary_restore_default">Restores the various values of the application to their default state.</string>
  <string name="settings_pref_title_version">Version</string>
  <string name="settings_pref_title_license">Copylefted libre license</string>
  <string name="settings_pref_summary_license" translatable="false">GNU GPL v3 or later</string>
  <string name="settings_category_general">General</string>
  <string name="settings_pref_title_language">Language</string>
  <string name="settings_pref_summary_language">Change the app language.</string>
  <string name="settings_pref_title_screen_orientation">Screen orientation</string>
  <string name="settings_pref_summary_screen_orientation">Sets the default screen orientation (main screen only).</string>
  <string name="settings_pref_title_nb_bytes">Number of bytes to display in one line</string>
  <string name="settings_pref_summary_nb_bytes">Allows showing 8 or 16 per line. Displaying 8 bytes greatly increases memory consumption.</string>
  <string name="settings_pref_title_partial_open_but_whole_file_is_opened">Partial file-opening</string>
  <string name="settings_pref_summary_partial_open_but_whole_file_is_opened">Files are considered to be opened normally if the entire file is opened, even if a partial opening is requested.</string>
  <string name="error_file_open">Close all files to change mode.</string>
  <string name="smart_input">Plain-text input</string>
  <string name="error_file_not_found">Could not find a %1$s file</string>
  <string name="error_file_permission">No permission has been granted for file %1$s</string>
  <string name="items_selected">%1$d Selected</string>
  <string name="confirm_save">Save file "%1$s"?</string>
  <string name="control_save_change">Please save your work first.</string>
  <string name="overwrite">Insert mode</string>
  <string name="size">Size</string>
  <string name="unit_bytes_full_lc">bytes</string>
  <string name="unit_byte_full">Byte</string>
  <string name="unit_byte">B</string>
  <string name="unit_kbyte">kB</string>
  <string name="unit_mbyte">MB</string>
  <string name="unit_gbyte">GB</string>
  <string name="hexadecimal">hexadecimal</string>
  <string name="decimal">decimal</string>
  <string name="error_title">Error</string>
  <string name="error_no_line_selected">No line was selected</string>
  <string name="error_edition_search_in_progress">Line editing is not possible when a search is in progress.</string>
  <string name="error_edition_continuous_selection">Line editing is only possible with a continuous selection.</string>
  <string name="error_no_file_access">No access to the file. Open it from the menu.</string>
  <string name="error_no_file">File missing (deleted or moved)</string>
  <string name="error_cant_exceed_xxx">It is not possible to exceed %1$s</string>
  <string name="action_open_sequential_title">Partial file opening…</string>
  <string name="action_open_sequential_title_button">Partial file opening</string>
  <string name="error_open_sequential_add_or_delete_data">Change to a different mode if you want to add or delete data</string>
  <string name="error_size_changed">The file size has changed. Click to specify the new size of the area to open.</string>
  <string name="start_offset">Start</string>
  <string name="end_offset">End</string>
  <string name="unit">Unit</string>
  <string name="input_type">Input type</string>
  <string name="file_size">File size</string>
  <string name="memory_threshold_title">Memory threshold</string>
  <string name="memory_threshold_description">Amount of memory allowed before opening a file is aborted.</string>
  <string name="settings_pref_title_restore_default">Restore default values</string>
  <string name="menu_select_all">Select all</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_copy">Copy</string>
  <string name="settings_pref_title_theme">Theme</string>
  <string name="settings_pref_summary_theme">Change the theme of the application.</string>
</resources>