<?xml version="1.0" encoding="utf-8"?>
<!--
Project: HexViewer
Author: Keidan
License: GPLv3
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:key="prefScreen"
  android:clearTaskOnLaunch="true"
  android:launchMode="singleTask">

  <androidx.preference.PreferenceCategory
    app:iconSpaceReserved="false"
    android:title="@string/settings_category_general">
    <androidx.preference.ListPreference
      app:iconSpaceReserved="false"
      android:entries="@array/languages_entries"
      android:entryValues="@array/languages_values"
      android:key="language"
      android:title="@string/settings_pref_title_language"
      android:summary="@string/settings_pref_summary_language" />
    <androidx.preference.ListPreference
      app:iconSpaceReserved="false"
      android:entries="@array/theme_entries"
      android:entryValues="@array/theme_values"
      android:key="theme"
      android:title="@string/settings_pref_title_theme"
      android:summary="@string/settings_pref_summary_theme"
      android:defaultValue="@string/default_theme_system" />
    <androidx.preference.ListPreference
      app:iconSpaceReserved="false"
      android:entries="@array/memory_thresholds"
      android:entryValues="@array/memory_thresholds"
      android:key="memoryThreshold"
      android:title="@string/memory_threshold_title"
      android:summary="@string/memory_threshold_description"
      android:defaultValue="@string/default_memory_threshold"/>
    <androidx.preference.ListPreference
      app:iconSpaceReserved="false"
      android:entries="@array/screen_orientation_entries"
      android:entryValues="@array/screen_orientation_values"
      android:key="screenOrientation"
      android:title="@string/settings_pref_title_screen_orientation"
      android:summary="@string/settings_pref_summary_screen_orientation" />
    <androidx.preference.ListPreference
      android:key="nbBytesPerLine"
      app:iconSpaceReserved="false"
      android:defaultValue="@string/default_nb_bytes_per_line"
      android:entries="@array/nb_bytes_per_Line"
      android:entryValues="@array/nb_bytes_per_Line"
      android:title="@string/settings_pref_title_nb_bytes"
      android:summary="@string/settings_pref_summary_nb_bytes" />
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="partialOpenButWholeFileIsOpened"
      android:defaultValue="@string/default_partial_open_but_whole_file_is_opened"
      android:title="@string/settings_pref_title_partial_open_but_whole_file_is_opened"
      android:summary="@string/settings_pref_summary_partial_open_but_whole_file_is_opened" />
  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    app:iconSpaceReserved="false"
    android:title="@string/settings_pref_category_portrait">
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="listsPortrait"
      android:title="@string/settings_pref_title_lists_portrait"
      android:summary="@string/settings_pref_summary_lists_portrait" />
  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    app:iconSpaceReserved="false"
    android:title="@string/settings_pref_category_landscape">
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="listsLandscape"
      android:title="@string/settings_pref_title_lists_landscape"
      android:summary="@string/settings_pref_summary_lists_landscape" />
  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    app:iconSpaceReserved="false"
    android:title="@string/settings_category_about">
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="logs"
      android:title="@string/settings_pref_title_logs"
      android:summary="@string/settings_pref_summary_logs" />
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="restoreDefault"
      android:title="@string/settings_pref_title_restore_default"
      android:summary="@string/settings_pref_summary_restore_default" />
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="version"
      android:title="@string/settings_pref_title_version" />
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="license"
      android:title="@string/settings_pref_title_license"
      android:summary="@string/settings_pref_summary_license"/>
  </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
