<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context="fr.ralala.hexviewer.ui.activities.MainActivity">

  <item android:id="@+id/action_search"
    android:icon="@drawable/ic_search"
    android:title="@string/search_title"
    app:showAsAction="ifRoom"
    app:actionViewClass="android.widget.SearchView"/>

  <group android:id="@+id/grp1">
    <item
      android:id="@+id/action_open"
      android:title="@string/action_open_title"
      app:showAsAction="never" />
    <item
      android:id="@+id/action_recently_open"
      android:title="@string/action_recently_open_title"
      app:showAsAction="never" />
    <item
      android:id="@+id/action_plain_text"
      android:checkable="true"
      android:title="@string/action_plain_text_title"
      app:showAsAction="never" />
    <item
      android:id="@+id/action_save"
      android:title="@string/action_save_title"
      app:showAsAction="never" />
    <item
      android:id="@+id/action_save_as"
      android:title="@string/action_save_as_title"
      app:showAsAction="never" />
    <item
      android:id="@+id/action_close"
      android:title="@string/action_close_title"
      app:showAsAction="never" />
  </group>

  <group android:id="@+id/grp2">
    <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings_title"
      app:showAsAction="never" />
  </group>
</menu>
