<?xml version="1.0" encoding="utf-8"?>
<!--
Project: HexViewer
Author: Keidan
License: GPLv3
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context="fr.ralala.hexviewer.ui.activities.MainActivity">

  <item android:id="@+id/action_copy"
    android:icon="@drawable/ic_copy"
    android:title="@string/menu_copy"
    app:showAsAction="ifRoom"
    app:iconTint="@color/textColor"/>

  <item android:id="@+id/action_edit"
    android:icon="@drawable/ic_edit"
    android:title="@string/menu_edit"
    app:showAsAction="ifRoom"
    app:iconTint="@color/textColor"/>

  <item android:id="@+id/action_clear"
    android:icon="@drawable/ic_delete"
    android:title="@string/menu_delete"
    app:showAsAction="ifRoom"
    app:iconTint="@color/actionMenuTextColor"/>

  <item android:id="@+id/action_select_all"
    android:icon="@drawable/ic_select_all"
    android:title="@string/menu_select_all"
    android:checkable="true"
    app:showAsAction="ifRoom"
    app:iconTint="@color/actionMenuTextColor"/>
</menu>
