<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/windowBackground">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">
  <FrameLayout
    android:layout_weight="0.5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    style="?android:borderlessButtonStyle" >
    <ImageView
      android:id="@+id/action_undo"
      android:layout_gravity="center"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:text="@null"
      android:contentDescription="@string/content_description_undo"
      android:src="@drawable/ic_undo"/>
  </FrameLayout>

  <FrameLayout
    android:layout_weight="0.5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    style="?android:borderlessButtonStyle" >
    <ImageView
      android:id="@+id/action_redo"
      android:layout_gravity="center"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:text="@null"
      android:contentDescription="@string/content_description_redo"
      android:src="@drawable/ic_redo"/>
  </FrameLayout>
  </LinearLayout>

  <TextView
    android:id="@+id/action_open"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_open_title"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />
  <TextView
    android:id="@+id/action_recently_open"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_recently_open_title"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />
  <CheckBox
    android:id="@+id/action_plain_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_plain_text_title"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />
  <TextView
    android:id="@+id/action_save"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_save_title"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />
  <TextView
    android:id="@+id/action_save_as"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_save_as_title"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />
  <TextView
    android:id="@+id/action_close"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_close_title"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />

  <TextView
    android:id="@+id/action_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/action_settings_title"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"  />
</LinearLayout>