<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/mainLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="1dp">

  <RelativeLayout
    android:id="@+id/idleView"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
      android:id="@+id/pleaseOpenFile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:layout_centerInParent="true"
      android:layout_alignParentStart="true"
      android:text="@string/please_open_file" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:orientation="vertical"
      android:padding="5dp"
      android:layout_marginBottom="100dp">
    <Button
      android:id="@+id/buttonOpenFile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/action_open_title" />

    <Button
      android:id="@+id/buttonRecentlyOpen"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/action_recently_open_title"/>
    </LinearLayout>
  </RelativeLayout>
  <ListView
    android:id="@+id/payloadView"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fastScrollEnabled="true"
    android:padding="1dp"
    android:textSize="12sp"
    android:typeface="monospace" />

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/payloadPlainSwipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
      android:id="@+id/payloadPlain"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      android:fastScrollEnabled="true"
      android:padding="1dp"
      android:textSize="12sp"
      android:typeface="monospace" />
  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>